--- a/samples/PINView.Samples/Views/SampleViews/BoxBackgroundColorSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/BoxBackgroundColorSampleView.xaml
@@ -3,14 +3,14 @@
     x:Class="PINView.Maui.Samples.Views.SampleViews.BoxBackgroundColorSampleView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:system="clr-namespace:System;assembly=netstandard"
-    xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui">
+    xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui"
+    xmlns:system="clr-namespace:System;assembly=netstandard">
     <ContentView.Content>
-        <Border Stroke="{StaticResource ColorA}" Style="{StaticResource SampleViewsContainerBorderStyle}">
+        <Border Style="{StaticResource SampleViewsContainerBorderStyle}">
 
             <StackLayout Spacing="0">
 
-                <Label BackgroundColor="{StaticResource LightColorA}" Style="{StaticResource SampleViewsHeaderLabelStyle}">
+                <Label Style="{StaticResource SampleViewsHeaderLabelStyle}">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="BoxBackgroundColor" />
@@ -40,6 +40,8 @@
                     <pinView:PINView
                         x:Name="pinView2"
                         BoxBackgroundColor="#DCEDC8"
+                        PINLength="5"
+                        PINValue="12345"
                         Style="{StaticResource PINViewStyle}"
                         Color="#33691E" />
 
