--- a/samples/PINView.Samples/Views/SampleViews/FontFamilySampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/FontFamilySampleView.xaml
@@ -6,10 +6,10 @@
     xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui"
     xmlns:system="clr-namespace:System;assembly=netstandard">
     <ContentView.Content>
-        <Border Stroke="{StaticResource ColorA}" Style="{StaticResource SampleViewsContainerBorderStyle}">
+        <Border Style="{StaticResource SampleViewsContainerBorderStyle}">
             <StackLayout>
 
-                <Label BackgroundColor="{StaticResource LightColorA}" Style="{StaticResource SampleViewsHeaderLabelStyle}">
+                <Label Style="{StaticResource SampleViewsHeaderLabelStyle}">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="FontFamily" />
@@ -21,12 +21,10 @@
                     <Label HorizontalTextAlignment="Center" Text="FontFamily = (Default)" />
                     <pinView:PINView
                         x:Name="pinView1"
-                        BoxBackgroundColor="{DynamicResource LightColorA}"
                         BoxShape="Circle"
                         IsPassword="False"
                         PINValue="1234"
-                        Style="{StaticResource PINViewStyle}"
-                        Color="{DynamicResource ColorA}" />
+                        Style="{StaticResource PINViewStyle}" />
 
                     <Label
                         Margin="0,20,0,0"
@@ -34,13 +32,11 @@
                         Text="FontFamily = FasthandRegular" />
                     <pinView:PINView
                         x:Name="pinView2"
-                        BoxBackgroundColor="{DynamicResource LightColorA}"
-                        IsPassword="False"
                         FontFamily="FasthandRegular"
+                        IsPassword="False"
                         PINLength="5"
                         PINValue="12345"
-                        Style="{StaticResource PINViewStyle}"
-                        Color="{DynamicResource ColorA}" />
+                        Style="{StaticResource PINViewStyle}" />
                 </StackLayout>
             </StackLayout>
         </Border>
