--- a/samples/PINView.Samples/Views/SampleViews/IsPasswordSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/IsPasswordSampleView.xaml
@@ -6,10 +6,10 @@
     xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui"
     xmlns:system="clr-namespace:System;assembly=netstandard">
     <ContentView.Content>
-        <Border Stroke="{StaticResource ColorB}" Style="{StaticResource SampleViewsContainerBorderStyle}">
+        <Border Style="{StaticResource SampleViewsContainerBorderStyle}">
             <StackLayout>
 
-                <Label BackgroundColor="{StaticResource LightColorB}" Style="{StaticResource SampleViewsHeaderLabelStyle}">
+                <Label Style="{StaticResource SampleViewsHeaderLabelStyle}">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="IsPassword" />
@@ -26,10 +26,8 @@
 
                     <pinView:PINView
                         x:Name="pinView1"
-                        BoxBackgroundColor="{StaticResource LightColorB}"
                         PINValue="1234"
-                        Style="{StaticResource PINViewStyle}"
-                        Color="{StaticResource ColorB}" />
+                        Style="{StaticResource PINViewStyle}" />
 
                     <Label
                         Margin="0,20,0,0"
@@ -38,11 +36,10 @@
 
                     <pinView:PINView
                         x:Name="pinView2"
-                        BoxBackgroundColor="{StaticResource LightColorB}"
                         IsPassword="True"
-                        PINValue="1234"
-                        Style="{StaticResource PINViewStyle}"
-                        Color="{StaticResource ColorB}" />
+                        PINLength="5"
+                        PINValue="12345"
+                        Style="{StaticResource PINViewStyle}" />
                 </StackLayout>
 
             </StackLayout>
