--- a/samples/PINView.Samples/Views/SampleViews/PINLengthSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/PINLengthSampleView.xaml
@@ -6,10 +6,10 @@
     xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui"
     xmlns:system="clr-namespace:System;assembly=netstandard">
     <ContentView.Content>
-        <Border Stroke="{StaticResource ColorA}" Style="{StaticResource SampleViewsContainerBorderStyle}">
+        <Border Style="{StaticResource SampleViewsContainerBorderStyle}">
             <StackLayout>
 
-                <Label BackgroundColor="{StaticResource LightColorA}" Style="{StaticResource SampleViewsHeaderLabelStyle}">
+                <Label Style="{StaticResource SampleViewsHeaderLabelStyle}">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="PINLength" />
@@ -25,12 +25,10 @@
                     <Label HorizontalTextAlignment="Center" Text="PINLength = 4 (Default)" />
                     <pinView:PINView
                         x:Name="pinView1"
-                        BoxBackgroundColor="{DynamicResource LightColorA}"
                         BoxShape="Circle"
                         IsPassword="False"
                         PINValue="1234"
-                        Style="{StaticResource PINViewStyle}"
-                        Color="{DynamicResource ColorA}" />
+                        Style="{StaticResource PINViewStyle}" />
 
                     <Label
                         Margin="0,20,0,0"
@@ -38,12 +36,10 @@
                         Text="PINLength = 5" />
                     <pinView:PINView
                         x:Name="pinView2"
-                        BoxBackgroundColor="{DynamicResource LightColorA}"
                         IsPassword="False"
                         PINLength="5"
                         PINValue="12345"
-                        Style="{StaticResource PINViewStyle}"
-                        Color="{DynamicResource ColorA}" />
+                        Style="{StaticResource PINViewStyle}" />
 
                     <Label
                         Margin="0,20,0,0"
@@ -51,12 +47,10 @@
                         Text="PINLength = 6" />
                     <pinView:PINView
                         x:Name="pinView3"
-                        BoxBackgroundColor="{DynamicResource LightColorA}"
                         IsPassword="False"
                         PINLength="6"
                         PINValue="123456"
-                        Style="{StaticResource PINViewStyle}"
-                        Color="{DynamicResource ColorA}" />
+                        Style="{StaticResource PINViewStyle}" />
                 </StackLayout>
 
             </StackLayout>
