--- a/samples/PINView.Samples/Views/SampleViews/BoxSizeSampleView.xaml
+++ b/samples/PINView.Samples/Views/SampleViews/BoxSizeSampleView.xaml
@@ -6,9 +6,9 @@
     xmlns:pinView="clr-namespace:PINView.Maui;assembly=PINView.Maui"
     xmlns:system="clr-namespace:System;assembly=netstandard">
     <ContentView.Content>
-        <Border Stroke="{StaticResource PrimaryColor}" Style="{StaticResource SampleViewsContainerBorderStyle}">
+        <Border Style="{StaticResource SampleViewsContainerBorderStyle}">
             <VerticalStackLayout>
-                <Label BackgroundColor="{StaticResource PrimaryLightColor}" Style="{StaticResource SampleViewsHeaderLabelStyle}">
+                <Label Style="{StaticResource SampleViewsHeaderLabelStyle}">
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="BoxSize" />
@@ -21,36 +21,54 @@
                 </Label>
 
                 <VerticalStackLayout Padding="0,20">
-                    <Label HorizontalTextAlignment="Center" Text="BoxSize = 30" />
+                    <Label HorizontalTextAlignment="Center" Text="FontSie = Default, BoxSize = Default" />
+                    <pinView:PINView
+                        PINLength="4"
+                        PINValue="1234"
+                        Style="{StaticResource PINViewStyle}" />
+
+                    <Label
+                        Margin="0,20,0,0"
+                        HorizontalTextAlignment="Center"
+                        Text="FontSie = Default, BoxSize = Default" />
                     <pinView:PINView
                         x:Name="pinView1"
+                        PINLength="5"
+                        PINValue="12345"
+                        Style="{StaticResource PINViewStyle}" />
+
+                    <Label
+                        Margin="0,20,0,0"
+                        HorizontalTextAlignment="Center"
+                        Text="FontSize = Default, BoxSize = 30" />
+                    <pinView:PINView
                         BoxSize="30"
-                        PINLength="4"
-                        PINValue="1234"
+                        PINLength="5"
+                        PINValue="12345"
                         Style="{StaticResource PINViewStyle}" />
 
                     <Label
                         Margin="0,20,0,0"
                         HorizontalTextAlignment="Center"
-                        Text="BoxSize = 50 (Default)" />
+                        Text="FontSize = 30, BoxSize = Default" />
                     <pinView:PINView
-                        x:Name="pinView2"
-                        BoxSize="50"
-                        PINLength="4"
-                        PINValue="1234"
+                        FontSize="30"
+                        PINLength="5"
+                        PINValue="12345"
                         Style="{StaticResource PINViewStyle}" />
 
                     <Label
                         Margin="0,20,0,0"
                         HorizontalTextAlignment="Center"
-                        Text="BoxSize = 70" />
+                        Text="FontSize = 30, BoxSize = 70" />
                     <pinView:PINView
-                        x:Name="pinView3"
-                        Margin="0,15,0,0"
                         BoxSize="70"
-                        PINLength="4"
-                        PINValue="1234"
+                        FontSize="30"
+                        PINLength="5"
+                        PINValue="12345"
                         Style="{StaticResource PINViewStyle}" />
+
+
                 </VerticalStackLayout>
             </VerticalStackLayout>
         </Border>
